Fixed contextmenu z-index

--- a/static/elements.css
+++ b/static/elements.css
@@ -330,6 +330,7 @@ ul.contextmenu {
 	box-shadow: 0 5px 18px rgba(0,0,0,0.6);
 	-moz-box-shadow: 0 5px 18px rgba(0,0,0,0.6);
 	-webkit-box-shadow: 0 5px 18px rgba(0,0,0,0.6);
+	z-index: 4;
 }
 
 ul.contextmenu > li {
